prusti-tests/tests/cargo_verify/failing_stable_toolchain/output.stderr
warning: unused variable: `unused`
 --> src/main.rs:4:17
  |
4 | fn test(x: i32, unused: usize) {
  |                 ^^^^^^ help: if this is intentional, prefix it with an underscore: `_unused`
  |
  = note: `#[warn(unused_variables)]` on by default

error: [Prusti: verification error] precondition might not hold.
 --> src/main.rs:9:5
  |
9 |     test(1, 0);
  |     ^^^^^^^^^^
  |
note: the failing assertion is here
 --> src/main.rs:3:12
  |
3 | #[requires(x > 123)]
  |            ^^^^^^^

error: could not compile `failing_stable_toolchain` (bin "failing_stable_toolchain") due to previous error; 1 warning emitted
